Revert "Fix some NG-Shows. Add PR #148 to scss". Causes way too much problems with existing code.
This reverts commit 6cc376312913ee556ac70a382a78fa45e30fcc01.

--- a/style/browser_action.scss
+++ b/style/browser_action.scss
@@ -9,7 +9,7 @@
 
 $sidebarWidth: 250px;
 body {
-  &.setup {
+  &.setup{
     width: 100%;
   }
   width: 450px;
@@ -48,12 +48,12 @@ body.toggled {
 }
 
 #sidebar-wrapper {
-  z-index: 10000;
+  z-index: 1000;
   position: fixed;
   left: $sidebarWidth;
   width: 0;
   height: 100%;
-  margin-left: -$sidebarWidth+1;
+  margin-left: -$sidebarWidth;
   overflow: hidden;
   background: #fff;
   -webkit-transition: all 0.250s ease;
@@ -81,6 +81,9 @@ body.toggled {
   /*  width: calc(100% - 250px);*/
 }
 
+.ng-hide {
+  display: none;
+}
 
 /* Sidebar Styles */
 
@@ -157,20 +160,12 @@ body.toggled {
 
 .menuToggler {
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.6);
-  width: 100%;
+  background-color: rgba(0,0,0,0.6);
+  width: calc(100% - 250px);
   height: 100%;
-  z-index: 1000;
+  z-index: 9999999;
   right: 0;
   top: 0;
-  visibility: visible;
-  opacity: 1;
-  transition: visibility 250ms, opacity 250ms ease;
-}
-
-.ng-hide {
-  visibility: hidden;
-  opacity: 0;
 }
 
 .edit_credential {
@@ -263,7 +258,7 @@ label, .switch-label, label:not(.input-checkbox):not(.label) {
   }
 }
 
-.tab-wrap .tab-label-content.account .tab-content.active {
+.tab-wrap .tab-label-content.account .tab-content.active{
   margin-top: 10px;
 }
 
@@ -277,17 +272,16 @@ label, .switch-label, label:not(.input-checkbox):not(.label) {
   height: 40px;
   line-height: 40px;
   padding: 0;
-  background-color: #1565c0;
+  background-color:  #1565c0;
   border-radius: 50%;
   transition: .3s;
   cursor: pointer;
   vertical-align: middle;
 }
-
 .btn, .btn-large {
   text-decoration: none;
   color: #fff;
-  background-color: #1565c0;
+  background-color:  #1565c0;
   text-align: center;
   letter-spacing: .5px;
   transition: .2s ease-out;
@@ -297,25 +291,20 @@ label, .switch-label, label:not(.input-checkbox):not(.label) {
   height: 56px;
   line-height: 54px;
 }
-
-.btn:hover, .btn-large:hover {
-  background-color: lighten(#1565c0, 20%);
+.btn:hover, .btn-large:hover{
+  background-color: lighten(#1565c0, 20%) ;
 }
-
-.fab {
+.fab{
   position: fixed;
   bottom: 20px;
   right: 20px;
 }
-
 .red {
   background-color: #F44336 !important;
 }
-
 .cg-notify-message-center {
   left: 112px !important;
 }
-
 .version {
   padding-bottom: 10px;
   padding-left: 15px;
